--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newsapp",
-  "homepage": "https://anas4746.github.io/",
+  "homepage": "https://anas4746.github.io/newsapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
